syntax = "proto3";
package Abook;
option cc_enable_arenas = false;
option csharp_namespace = "Abook";

message AddressBookEntry
{
	int32  id = 1;
	string firstName = 2;
	string lastName = 3;
	string address = 4;
	int32 postalCode = 5;
	string city = 6;
};